whitespace fix again

--- a/themes/glitchwitch/static/css/style.css
+++ b/themes/glitchwitch/static/css/style.css
@@ -36,7 +36,7 @@ hr {
   border-color: #e60073;
 }
 
-pre {
+.ascii {
   white-space: pre;
 }
 
